[package]
name = "ship-nft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw721 = { version = "0.13.2" }
cw721-base = { version = "0.13.2", features = ["library"], path = "../../packages/cw721-base" }
cw-storage-plus = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
coho_nft = { version = "0.1.0", path = "../../packages/coho_nft" }
